--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Helm unittest",
             "type": "shell",
-            "command": "${workspaceFolder}/test.sh",
+            "command": "${workspaceFolder}/tests/helm-unittest.sh",
             "group": "test",
             "presentation": {
                 "echo": false,
@@ -13,7 +13,21 @@
                 "panel": "shared",
                 "showReuseMessage": false,
                 "clear": true
-            },
+            }
+        },
+        {
+            "label": "pre-commit",
+            "type": "shell",
+            "command": "${workspaceFolder}/tests/pre-commit.sh",
+            "group": "test",
+            "presentation": {
+                "echo": false,
+                "reveal": "silent",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "clear": true
+            }
         }
     ]
 }
