Add support for `selectorLabels` for controller and service
Adds `controller.selectorLabels` and `service.*.serviceLabels`
  that can be user to create multiple controllers
Added default `selectorLabel` `role: primary`
  to main service and controller

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
     "triggerTaskOnSave.tasks": {
         "Helm unittest": [
             "charts/*/templates/**",
+            "charts/*/values.yaml",
             "testing-charts/*/tests/*/*_test.yaml"
         ],
         "pre-commit": [
