Refactor deployment, daemonset and statefulset as class
This change will allow to create multiple controllers from values.yaml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,6 @@
         ]
     },
     "triggerTaskOnSave.restart": true,
-    "triggerTaskOnSave.showStatusBarToggle": true
+    "triggerTaskOnSave.showStatusBarToggle": true,
+    "editor.indentSize": 2
 }
