--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,8 @@
     ":prConcurrentLimit10",
     ":separateMultipleMajorReleases",
     ":enablePreCommit",
-    ":prHourlyLimitNone"
+    ":prHourlyLimitNone",
+    ":pinVersions"
   ],
   "github-actions": {
     "fileMatch": [
