--- a/renovate.json
+++ b/renovate.json
@@ -33,7 +33,7 @@
       "matchUpdateTypes": ["pinDigest", "pin", "patch", "digest"],
       "postUpgradeTasks": {
         "commands": [
-          "docker run --rm -it -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --bump-patch \"$(basename '{{parentDir}}')\"'"
+          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --bump-patch \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
           "**/Chart.yaml"
@@ -50,7 +50,7 @@
       "matchUpdateTypes": ["minor"],
       "postUpgradeTasks": {
         "commands": [
-          "docker run --rm -it -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --bump-minor \"$(basename '{{parentDir}}')\"'"
+          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --bump-minor \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
           "**/Chart.yaml"
