--- a/renovate.json
+++ b/renovate.json
@@ -33,8 +33,7 @@
       "matchUpdateTypes": ["pinDigest", "pin", "patch", "digest"],
       "postUpgradeTasks": {
         "commands": [
-          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --bump-patch \"$(basename '{{parentDir}}')\"'",
-          "git add index.yaml releases"
+          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --chown 1000:1000 --bump-patch \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
           "**/Chart.yaml"
@@ -51,8 +50,7 @@
       "matchUpdateTypes": ["minor"],
       "postUpgradeTasks": {
         "commands": [
-          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --bump-minor \"$(basename '{{parentDir}}')\"'",
-          "git add index.yaml releases"
+          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --chown 1000:1000 --bump-minor \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
           "**/Chart.yaml"
