--- a/renovate.json
+++ b/renovate.json
@@ -55,9 +55,9 @@
         "fileFilters": [
           "**/Chart.yaml"
         ],
-        "executionMode": "branch",
-        "groupName": "helm-minor"
-      }
+        "executionMode": "branch"
+      },
+      "groupName": "helm-minor"
     }
   ]
 }
