--- a/renovate.json
+++ b/renovate.json
@@ -36,7 +36,9 @@
           "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --chown 1000:1000 --bump-patch \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
-          "**/Chart.yaml"
+          "**/Chart.yaml",
+          "releases/*",
+          "index.yaml"
         ],
         "executionMode": "branch"
       },
@@ -53,7 +55,9 @@
           "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --chown 1000:1000 --bump-minor \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
-          "**/Chart.yaml"
+          "**/Chart.yaml",
+          "releases/*",
+          "index.yaml"
         ],
         "executionMode": "branch"
       },
