--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "redhat.vscode-yaml",
         "streetsidesoftware.code-spell-checker",
-        "ms-kubernetes-tools.vscode-kubernetes-tools"
+        "ms-kubernetes-tools.vscode-kubernetes-tools",
+        "mads-hartmann.bash-ide-vscode"
     ]
 }
