--- a/renovate.json
+++ b/renovate.json
@@ -33,7 +33,7 @@
       "matchUpdateTypes": ["pinDigest", "pin", "patch", "digest"],
       "postUpgradeTasks": {
         "commands": [
-          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --chown 1000:1000 --bump-patch \"$(basename '{{parentDir}}')\"'"
+          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./scripts/release.sh --alpine-install-deps --chown 1000:1000 --bump-patch \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
           "**/Chart.yaml",
@@ -52,7 +52,7 @@
       "matchUpdateTypes": ["minor"],
       "postUpgradeTasks": {
         "commands": [
-          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./release.sh --alpine-install-deps --chown 1000:1000 --bump-minor \"$(basename '{{parentDir}}')\"'"
+          "docker run --rm -w \"$PWD\" -v\"$PWD:$PWD\" alpine sh -c 'apk add --no-cache bash && ./scripts/release.sh --alpine-install-deps --chown 1000:1000 --bump-minor \"$(basename '{{parentDir}}')\"'"
         ],
         "fileFilters": [
           "**/Chart.yaml",
