--- a/testing-charts/common-test/tests/pod/additionalcontainers_test.yaml
+++ b/testing-charts/common-test/tests/pod/additionalcontainers_test.yaml
@@ -3,48 +3,46 @@ templates:
   - common.yaml
 tests:
   - it: with explicit name should pass
+    documentIndex: &controllerIndex 0
     set:
       additionalContainers:
         additional1:
           name: template-test
     asserts:
-      - documentIndex: 0
-        isKind:
+      - isKind:
           of: Deployment
-      - documentIndex: 0
-        equal:
+      - equal:
           path: spec.template.spec.containers[1].name
           value: template-test
 
   - it: with implicit name should pass
+    documentIndex: *controllerIndex
     set:
       additionalContainers:
         additional1:
           image: template-test
     asserts:
-      - documentIndex: 0
-        isKind:
+      - isKind:
           of: Deployment
-      - documentIndex: 0
-        equal:
+      - equal:
           path: spec.template.spec.containers[1].name
           value: additional1
 
   - it: with templated name should pass
+    documentIndex: *controllerIndex
     set:
       additionalContainers:
         additional1:
           name: "{{ .Release.Name }}-container"
     asserts:
-      - documentIndex: 0
-        isKind:
+      - isKind:
           of: Deployment
-      - documentIndex: 0
-        equal:
+      - equal:
           path: spec.template.spec.containers[1].name
           value: RELEASE-NAME-container
 
   - it: with custom env vars dict should pass
+    documentIndex: *controllerIndex
     set:
       env:
         main_env: value
@@ -56,36 +54,46 @@ tests:
             string: value_of_env
             template: "{{ .Release.Name }}-admin"
     asserts:
-      - documentIndex: &DeploymentDocument 0
-        isKind:
+      - isKind:
           of: Deployment
-      - documentIndex: *DeploymentDocument
-        equal:
+      - equal:
           path: spec.template.spec.containers[0].env[0]
           value:
             name: main_env
             value: "value"
-      - documentIndex: *DeploymentDocument
-        equal:
+      - equal:
           path: spec.template.spec.containers[1].env[0]
           value:
             name: float
             value: "1.5"
-      - documentIndex: *DeploymentDocument
-        equal:
+      - equal:
           path: spec.template.spec.containers[1].env[1]
           value:
             name: int
             value: "1"
-      - documentIndex: *DeploymentDocument
-        equal:
+      - equal:
           path: spec.template.spec.containers[1].env[2]
           value:
             name: string
             value: value_of_env
-      - documentIndex: *DeploymentDocument
-        equal:
+      - equal:
           path: spec.template.spec.containers[1].env[3]
           value:
             name: template
             value: RELEASE-NAME-admin
+
+  - it: should include additional containers from controller.additionalContainers
+    documentIndex: *controllerIndex
+    set:
+      env:
+        main_env: value
+      controller:
+        additionalContainers:
+          additional1:
+            image: template-test
+    asserts:
+      - isKind:
+          of: Deployment
+      - equal:
+          path: spec.template.spec.containers[1].name
+          value: additional1
