--- a/testing-charts/common-test/tests/container/env_test.yaml
+++ b/testing-charts/common-test/tests/container/env_test.yaml
@@ -56,26 +56,10 @@ tests:
             name: string
             value: "1"
 
-  - it: List should pass
-    set:
-      env:
-        - name: STATIC_ENV_FROM_LIST
-          value: STATIC_ENV_VALUE_FROM_LIST
-    asserts:
-      - documentIndex: &DeploymentDoc 0
-        isKind:
-          of: Deployment
-      - documentIndex: *DeploymentDoc
-        equal:
-          path: spec.template.spec.containers[0].env[0]
-          value:
-            name: STATIC_ENV_FROM_LIST
-            value: STATIC_ENV_VALUE_FROM_LIST
-
   - it: Explicit ValueFrom in list should pass
     set:
       env:
-        - name: DYNAMIC_ENV_FROM_LIST
+        DYNAMIC_ENV_FROM_LIST:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
