--- a/charts/common/values.yaml
+++ b/charts/common/values.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../jsonschema/common.json
 global:
   # -- Set an override for the prefix of the fullname
   nameOverride:
@@ -73,6 +74,20 @@ controller:
       enabled: true
     startup:
       enabled: true
+
+
+  # -- Used in conjunction with `controller.type: statefulset` to create individual disks for each instance.
+  volumeClaimTemplates: []
+  # - name: data
+  #   mountPath: /data
+  #   accessMode: "ReadWriteOnce"
+  #   size: 1Gi
+  # - name: backup
+  #   mountPath: /backup
+  #   subPath: theSubPath
+  #   accessMode: "ReadWriteOnce"
+  #   size: 2Gi
+  #   storageClass: cheap-storage-class
 
 # -- Default definition
 image:
@@ -474,19 +489,6 @@ persistence:
     # -- If the `SizeMemoryBackedVolumes` feature gate is enabled, you can
     # specify a size for memory backed volumes.
     sizeLimit:  # 1Gi
-
-# -- Used in conjunction with `controller.type: statefulset` to create individual disks for each instance.
-volumeClaimTemplates: []
-# - name: data
-#   mountPath: /data
-#   accessMode: "ReadWriteOnce"
-#   size: 1Gi
-# - name: backup
-#   mountPath: /backup
-#   subPath: theSubPath
-#   accessMode: "ReadWriteOnce"
-#   size: 2Gi
-#   storageClass: cheap-storage-class
 
 # -- Node selection constraint
 # [[ref]](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector)
